# type-search

./: CHANGELOG.md  LICENSE  README.md  type-search.cabal
src/: Search.hs
src/Search/: Hoogle.hs  Structured.hs
test/: Main.hs
