cabal-version:       >=1.10
name:                type-search
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.13 && <4.17
                     , lens
                     , transformers
                     , containers
                     , streamly
                     , exceptions
                     , equivalence
                     , prettyprinter
  exposed-modules:     Search
                     , Search.Hoogle
                     , Search.Structured
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite type-search-tests
  build-depends:       type-search
                     , base
                     , hedgehog
                     , streamly
                     , transformers
                     , containers
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
